--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@
 
 ## CMake.gitignore
 CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+Testing
+CTestTestfile.cmake
